--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,5 @@ MultiPageHtml_Digital_Analog/MultiPageHtml_Digital_Analog.ino
 MultiPageHtml_3/MultiPageHtml_3.ino
 mcp23016_base_ouput/mcp23016_base_ouput.ino
 mcp23016_16_lights_sketch/mcp23016_16_lights_sketch.ino
+Online_Humidity_Light_BMP183_SD/Online_Humidity_Light_BMP183_SD.ino
+Online_Humidity_Light_BMP183_SD_RTC/Online_Humidity_Light_BMP183_SD_RTC.ino
