compiled in arduino ide 1.0.3

--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@ shroomheater/shroomheater.ino
 shroomheater/shroomheater.ino
 weatherStation1/weatherStation1.ino
 shroomheater/shroomheater.ino
+shroomheater/shroomheater.ino
