compiled in IDE 1.0.3

--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,4 @@ shroomheater/shroomheater.ino
 weatherStation1/weatherStation1.ino
 shroomheater/shroomheater.ino
 shroomheater/shroomheater.ino
+shroomheater/shroomheater.ino
