No debug version to use with ArduinoMonitor
(Compiled in IDE 1.0.3)

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ weatherStation1/weatherStation1.ino
 shroomheater/shroomheater.ino
 shroomheater/shroomheater.ino
 shroomheater/shroomheater.ino
+sketch_141103a/sketch.properties
+sketch_141103a/sketch_141103a.pde
